# 2022_2PG

./: CMakeLists.txt  main.c  midterm-1.c
week10/: week10_1.c  week10_2.c  week10_3.c  week10_4.c  week10_5.c  week10_6_video.c  week10_7_autocar.c  week10_8_grade.c
week11/: week11_delete-space.c  week11_handle-school-id.c  week11_input-print-ascii.c  week11_salary-find-200.c
week12/: week12_1.c  week12_count_char.c  week12_dict.c  week12_tokenizer.c
week13/: week13_assignment05.c  week13_encryption.c  week13_kcal_cal.c  week13_struct_ex.c
week14/: Quiz03.c  week14_double_pointer.c  week14_file.c  week14_file_inNout.c  week14_imgcpy.c  week14_malloc.c
week2/: assignment1.c  assignment2.c
week4/: week4.c
week5/: week5_1.c  week5_2.c
week6/: week6_1.c  week6_2.c  week6_3.c  week6_4.c
week7/: assignment1.c  assignment2.c  week7_1.c  week7_2.c  week7_3.c
week8/: week8_1.c  week8_2.c
week9/: Quiz02_1.c  Quiz02_2.c  week9_1.c  week9_2.c  week9_3.c  week9_4.c  week9_5.c  week9_6.c
