cmake_minimum_required(VERSION 3.23)
project(programming_and_test2 C)

set(CMAKE_C_STANDARD 17)

#add_executable(programming_and_test2 main.c)
#add_executable(assignment1 week2/assignment1.c)
#add_executable(assignment2 week2/assignment2.c)
#add_executable(week4_week4 week4/week4.c)
#add_executable(week5_week5_1 week5/week5_1.c)
#add_executable(week5_week5_2 week5/week5_2.c)
#add_executable(week6_week6_1 week6/week6_1.c)
#add_executable(week6_week6_2 week6/week6_2.c)
#add_executable(week6_week6_3 week6/week6_3.c)
#add_executable(week6_week6_4 week6/week6_4.c)
#add_executable(week7_week7_1 week7/week7_1.c)
#add_executable(week7_week7_2 week7/week7_2.c)
#add_executable(week7_week7_3 week7/week7_3.c)
#add_executable(week7_assignment1 week7/assignment1.c)
#add_executable(week7_assignment2 week7/assignment2.c)
add_executable(week8_week8_1 week8/week8_1.c)
add_executable(week8_week8_2 week8/week8_2.c)

add_executable(week9_Quiz02_1 week9/Quiz02_1.c)
add_executable(week9_Quiz02_2 week9/Quiz02_2.c)
add_executable(week9_week9_1 week9/week9_1.c)